Fixing horizontal scrolling issue

--- a/src/components/page/page.less
+++ b/src/components/page/page.less
@@ -1,5 +1,6 @@
 
 .mw-page {
+  overflow: hidden;
   display: block;
   margin-left: 0;
 
