--- a/src/less/core/general.less
+++ b/src/less/core/general.less
@@ -14,7 +14,6 @@ html, body {
   margin: 0;
   padding: 0;
 
-  min-width: 100vw;
   min-height: 100vh;
 
   font-family: Lato, Helvetica, sans-serif;
