--- a/src/less/core/post.less
+++ b/src/less/core/post.less
@@ -1,6 +1,9 @@
 
 // Specificity is key
 .mw-page .mw-post {
+  @line-height: 1.5em;
+  @padding-left: .8em; 
+
   h1, h2, h3, p {
     margin: 15px 0;
     max-width: 100%;
@@ -21,13 +24,14 @@
 
   p {
     font-size: 16px;
-    line-height: 1.5em;
-    text-indent: .7em;
+    line-height: @line-height;
+    text-indent: @padding-left;
+    max-width: 100%;
   }
 
   blockquote {
-    margin: 15px 30px;
-    line-height: 1.5em;
+    margin: 15px (@padding-left * 2.5);
+    line-height: @line-height;
 
     .light;
   }
@@ -35,7 +39,7 @@
   ul, ol {
     margin: 15px 0;
     max-width: 100%;
-    padding-left: .7em;
+    padding-left: @padding-left;
 
     ul, ol {
       margin: 0;
@@ -43,12 +47,23 @@
   }
 
   li {
-    margin: 5px 0;
+    line-height: @line-height;
 
     &:before {
       content: "\2014";
       margin-right: 5px;
     }
+  }
+
+  dt {
+    line-height: @line-height;
+  }
+
+  dd {
+    padding-left: @padding-left;
+    line-height: @line-height;
+    margin: 0;
+    .light;
   }
 
   img {
@@ -65,5 +80,63 @@
     color: fadeout(@mw-color-swatch-1-light-1, 20%);
     //text-decoration: underline;
     font-weight: 400;
+  }
+
+  pre {
+    overflow-x: auto;
+  }
+
+  table {
+    border-collapse: collapse;
+
+    thead {
+      tr {
+        th {
+          padding-bottom: 15px;
+        }
+      }
+    }
+
+    tbody {
+      tr {
+        padding: 0;
+        margin: 0;
+
+        td, th {
+          padding: 5px 15px;
+          border: 1px solid @mw-color-white;
+          vertical-align: top;
+          border: 1px dotted fadeout(white, 50%);
+          
+          tr:first-child & {
+            border-top: none;
+          }
+
+          tr:last-child & {
+            border-bottom: none;
+          }
+
+          &:first-child {
+            border-left: none;
+          }
+
+          &:last-child {
+            border-right: none;
+          }
+        }
+
+        &:first-child {
+          td, th {
+            border-top: none;
+          } 
+        }
+
+        &:last-child {
+          td, th {
+            border-bottom: none;
+          } 
+        }
+      }
+    }
   }
 }
